Port to Architectury (Fabric + Forge)
Signed-off-by: unilock <unilock@fennet.rentals>

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,24 +1,20 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
-org.gradle.parallel=true
+org.gradle.jvmargs=-Xmx4G
 
-# Fabric Properties
-	# check these on https://fabricmc.net/develop
-	minecraft_version=1.19.4
-	yarn_mappings=1.19.4+build.2
-	loader_version=0.14.21
+enabled_platforms=fabric,forge
+
+# Base Properties
+minecraft_version=1.19.2
+yarn_mappings=1.19.2+build.28
+fabric_loader_version=0.14.21
+forge_version=1.19.2-43.2.0
 
 # Mod Properties
-	mod_version=0.2.2+jade.1.19
-	mod_id=reputation
-	maven_group=atonkish.reputation
-	archives_base_name=your-reputation
+mod_version=0.2.2
+mod_id=reputation
+maven_group=atonkish.reputation
+archives_base_name=your-reputation
 
 # Dependencies
-	fabric_version=0.83.0+1.19.4
-	# jade_version=1.19.4-fabric-10.3.1
-	jade_file_id=4561717
-
-# Distribution platform
-	curseforge_id=579757
-	modrinth_id=MrLyhFlg
+mod_platform=jade
+jade_fabric_version=4328558
+jade_forge_version=4433884
