--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -34,4 +34,6 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: Artifacts
-          path: build/libs/
+          path: |
+            fabric/build/libs/
+            forge/build/libs/
