--- a/build.gradle
+++ b/build.gradle
@@ -1,135 +1,47 @@
 plugins {
-	id "fabric-loom" version "1.2-SNAPSHOT"
-	id "maven-publish"
-	id "com.matthewprenger.cursegradle" version "1.4.0"
-	id "com.modrinth.minotaur" version "2.+"
+    id "architectury-plugin" version "3.4-SNAPSHOT"
+    id "dev.architectury.loom" version "1.1-SNAPSHOT" apply false
+    id "io.github.juuxel.loom-quiltflower" version "1.10.0" apply false
 }
 
-sourceCompatibility = JavaVersion.VERSION_17
-targetCompatibility = JavaVersion.VERSION_17
-
-archivesBaseName = project.archives_base_name
-version = project.mod_version
-group = project.maven_group
-
-repositories {
-	// Add repositories to retrieve artifacts from in here.
-	// You should only use this when depending on other mods because
-	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
-	// for more information about repositories.
-
-	maven {
-		url "https://www.cursemaven.com"
-		content {
-			includeGroup "curse.maven"
-		}
-	}
+architectury {
+    minecraft = rootProject.minecraft_version
 }
 
-dependencies {
-	// To change the versions see the gradle.properties file
-	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-
-	// Fabric API. This is technically optional, but you probably want it anyway.
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-
-	// Jade
-	modImplementation "curse.maven:jade-324717:${project.jade_file_id}"
-}
-
-processResources {
-	inputs.property "version", project.version
-
-	filesMatching("fabric.mod.json") {
-		expand "version": project.version
-	}
-}
-
-tasks.withType(JavaCompile).configureEach {
-	// Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
-	it.options.release = 17
-}
-
-java {
-	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-	// if it is present.
-	// If you remove this line, sources will not be generated.
-	withSourcesJar()
-}
-
-jar {
-	from("LICENSE") {
-		rename { "${it}_${project.archivesBaseName}"}
-	}
-}
-
-// configure the maven publication
-publishing {
-	publications {
-		mavenJava(MavenPublication) {
-			from components.java
-		}
-	}
-
-	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
-	repositories {
-		// Add repositories to publish to here.
-		// Notice: This block does NOT have the same function as the block in the top level.
-		// The repositories here will be used for publishing your artifact, not for
-		// retrieving dependencies.
-		maven {
-			url "file:/$buildDir/maven"
-		}
-	}
-}
-
-curseforge {
-	apiKey = project.findProperty("curseforge_token") ?: "Missing token"
-
-	project {
-		id = project.curseforge_id
-
-		mainArtifact(remapJar) {
-			displayName = "Your Reputation v${project.version}"
-		}
-		releaseType = "release"
-		changelogType = "markdown"
-		changelog = "[v${project.version}](https://github.com/Aton-Kish/your-reputation/releases/tag/v" + java.net.URLEncoder.encode(project.version, "UTF-8") + ")"
-
-		addGameVersion "Fabric"
-		addGameVersion "Java 17"
-		addGameVersion "1.19"
-		addGameVersion "1.19.1"
-		addGameVersion "1.19.2"
-		addGameVersion "1.19.3"
-		addGameVersion "1.19.4"
-
-		relations {
-			requiredDependency "fabric-api"
-			requiredDependency "jade"
-		}
-	}
-}
-
-modrinth {
-    token = project.findProperty("modrinth_token") ?: "Missing token"
-
-    projectId = project.modrinth_id
-
-    uploadFile = remapJar
-    versionNumber = project.version
-	versionName = "Your Reputation v${project.version}"
-    versionType = "release"
-	changelog = "[v${project.version}](https://github.com/Aton-Kish/your-reputation/releases/tag/v" + java.net.URLEncoder.encode(project.version, "UTF-8") + ")"
-
-    gameVersions = ["1.19", "1.19.1", "1.19.2", "1.19.3", "1.19.4"]
-    loaders = ["fabric"]
+subprojects {
+    apply plugin: "dev.architectury.loom"
+    apply plugin: "io.github.juuxel.loom-quiltflower"
 
     dependencies {
-        required.project "fabric-api"
-        required.project "jade"
+        minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
+        mappings "net.fabricmc:yarn:${rootProject.yarn_mappings}:v2"
+    }
+}
+
+allprojects {
+    apply plugin: "java"
+    apply plugin: "architectury-plugin"
+    apply plugin: "maven-publish"
+
+    archivesBaseName = "${rootProject.archives_base_name}-${project.name}"
+    version = "${rootProject.mod_version}+${rootProject.mod_platform}.${rootProject.minecraft_version}"
+    group = rootProject.maven_group
+
+    repositories {
+        maven {
+            url "https://cursemaven.com"
+            content {
+                includeGroup "curse.maven"
+            }
+        }
+    }
+
+    tasks.withType(JavaCompile) {
+        options.encoding = "UTF-8"
+        options.release = 17
+    }
+
+    java {
+        withSourcesJar()
     }
 }
